use exception to handle errors in socket and fixed bugs

--- a/SML/server/Makefile
+++ b/SML/server/Makefile
@@ -2,6 +2,7 @@ MLTON_HOME=/usr/lib/mlton
 MLTON_INCLUDE=$(MLTON_HOME)/include
 MLTON_BIN=/usr/bin/mlton
 
+#MLTON_FLAGS=-profile time -profile-branch true -profile-stack true -profile-val true
 CC=gcc
 CFLAGS=-I$(MLTON_INCLUDE)
 LDFLAGS=-lcrypto -lssl
@@ -10,7 +11,7 @@ LDFLAGS=-lcrypto -lssl
 all: server
 
 server: server.mlb *.sml
-	$(MLTON_BIN) -output server -link-opt "$(LDFLAGS)" server.mlb
+	$(MLTON_BIN) $(MLTON_FLAGS) -output server -link-opt "$(LDFLAGS)" server.mlb
 
 clean:
-	rm -f *.o
+	rm -f *.o server
